force-app/main/default/objects/Asset/fields/AccountCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountCustomerNumber__c</fullName>
    <formula>Account.OldCustomerNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>