force-app/main/default/objects/Asset/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>