force-app/main/default/objects/Asset/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>