force-app/main/default/objects/Asset/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>If(
				AND(
								OR(TODAY()&lt;CancellationDate__c,ISNULL(CancellationDate__c)),
						   OR( 
									    AND(
						         NOT(ISNULL(RenewalDate__c)),
								        RenewalDate__c &gt;= TODAY()
						        ),
					        AND(EndDate__c &gt;= TODAY(),ISNULL(RenewalDate__c))	
			       )
				)		
, true, false)  

/*
RenewalDate__c 
EndDate__c 
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>