force-app/main/default/objects/Asset/fields/ApplyIndexationPercentage__c.field-meta.xml
<CustomField>
    <fullName>ApplyIndexationPercentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Indexation Percentage</label>
    <type>Checkbox</type>
</CustomField>