force-app/main/default/objects/Asset/fields/AssetRenewalTrigger__c.field-meta.xml
<CustomField>
    <fullName>AssetRenewalTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Renewal Trigger</label>
    <type>Checkbox</type>
</CustomField>