force-app/main/default/objects/Asset/fields/AutomatedRenewProcess__c.field-meta.xml
<CustomField>
    <fullName>AutomatedRenewProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Renew Process</label>
    <type>Checkbox</type>
</CustomField>