force-app/main/default/objects/Asset/fields/AverageIntroductionYear__c.field-meta.xml
<CustomField>
    <fullName>AverageIntroductionYear__c</fullName>
    <label>Average Introduction Year</label>
    <type>TextArea</type>
</CustomField>