force-app/main/default/objects/Asset/fields/AverageStudyIntroductionYear__c.field-meta.xml
<CustomField>
    <fullName>AverageStudyIntroductionYear__c</fullName>
    <label>Average Study Introduction Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>