force-app/main/default/objects/Asset/fields/BIId__c.field-meta.xml
<CustomField>
    <fullName>BIId__c</fullName>
    <label>BI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>