force-app/main/default/objects/Asset/fields/Bill_to_acc_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_acc_Id__c</fullName>
    <formula>BillToAccount__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to acc Id</label>
    <type>Text</type>
</CustomField>