force-app/main/default/objects/Asset/fields/BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>BillToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>