force-app/main/default/objects/Asset/fields/BilltoExternalId__c.field-meta.xml
<CustomField>
    <fullName>BilltoExternalId__c</fullName>
    <formula>BillToAccount__r.ExternalCustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BilltoExternalId</label>
    <type>Text</type>
</CustomField>