force-app/main/default/objects/Asset/fields/BillToName__c.field-meta.xml
<CustomField>
    <fullName>BillToName__c</fullName>
    <formula>BillToAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillToName</label>
    <type>Text</type>
</CustomField>