force-app/main/default/objects/Asset/fields/Booklist__c.field-meta.xml
<CustomField>
    <fullName>Booklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booklist</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Booklist</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>