force-app/main/default/objects/Asset/fields/BooklistDate__c.field-meta.xml
<CustomField>
    <fullName>BooklistDate__c</fullName>
    <label>Booklist Date</label>
    <type>Date</type>
</CustomField>