force-app/main/default/objects/Asset/fields/BooklistName__c.field-meta.xml
<CustomField>
    <fullName>BooklistName__c</fullName>
    <formula>Booklist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booklist Name</label>
    <type>Text</type>
</CustomField>