force-app/main/default/objects/Asset/fields/CancelationDate__c.field-meta.xml
<CustomField>
    <fullName>CancelationDate__c</fullName>
    <label>zRemoveCancelation Date</label>
    <type>Date</type>
</CustomField>