force-app/main/default/objects/Asset/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <inlineHelpText>Please use the Cancel Asset button to cancel assets</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>