force-app/main/default/objects/Asset/fields/CancellationTrigger__c.field-meta.xml
<CustomField>
    <fullName>CancellationTrigger__c</fullName>
    <description>Determines whether an Asset needs to be cancelled today</description>
    <formula>AND(
 CancellationDate__c 				 &lt;= TODAY()+1,
				IsActive__c = true
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancellationTrigger</label>
    <type>Checkbox</type>
</CustomField>