force-app/main/default/objects/Asset/fields/CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>CaseSafeId__c</fullName>
    <description>Stores the 18 character Salesforce Id of the Asset</description>
    <formula>CASESAFEID(Id)</formula>
    <label>CaseSafeId</label>
    <type>Text</type>
</CustomField>