force-app/main/default/objects/Asset/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Direct / Retail</fullName>
                <isActive>false</isActive>
                <label>Direct / Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>