force-app/main/default/objects/Asset/fields/Crebocode__c.field-meta.xml
<CustomField>
    <fullName>Crebocode__c</fullName>
    <label>Crebocode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>