force-app/main/default/objects/Asset/fields/CurrentEdition__c.field-meta.xml
<CustomField>
    <fullName>CurrentEdition__c</fullName>
    <label>Current Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>