force-app/main/default/objects/Asset/fields/CurrentMethod__c.field-meta.xml
<CustomField>
    <fullName>CurrentMethod__c</fullName>
    <description>Up for debate: lookup to Product Kit?</description>
    <label>Current Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>