force-app/main/default/objects/Asset/fields/CurrentPublisher__c.field-meta.xml
<CustomField>
    <fullName>CurrentPublisher__c</fullName>
    <label>Current Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>