force-app/main/default/objects/Asset/fields/DigitalActivationEmail__c.field-meta.xml
<CustomField>
    <fullName>DigitalActivationEmail__c</fullName>
    <label>Digital Activation Email</label>
    <type>Email</type>
</CustomField>