force-app/main/default/objects/Asset/fields/DigitalFactor__c.field-meta.xml
<CustomField>
    <fullName>DigitalFactor__c</fullName>
    <label>Digital Factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>