force-app/main/default/objects/Asset/fields/DiscountedPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountedPrice__c</fullName>
    <description>Price after structural/hierarchy discounts but before manual discounts.</description>
    <inlineHelpText>Price after structural/hierarchy discounts but before manual discounts.</inlineHelpText>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>