force-app/main/default/objects/Asset/fields/EducationClassification__c.field-meta.xml
<CustomField>
    <fullName>EducationClassification__c</fullName>
    <label>Education Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>