force-app/main/default/objects/Asset/fields/EstimatedNumofStudentsIntroYear__c.field-meta.xml
<CustomField>
    <fullName>EstimatedNumofStudentsIntroYear__c</fullName>
    <label>Estimated Num of Students Intro Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>