force-app/main/default/objects/Asset/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <label>Importance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>