force-app/main/default/objects/Asset/fields/ImportAssetProcessedDate__c.field-meta.xml
<CustomField>
    <fullName>ImportAssetProcessedDate__c</fullName>
    <label>ImportAsset Processed Date</label>
    <type>Date</type>
</CustomField>