force-app/main/default/objects/Asset/fields/Informhfdstructuur__c.field-meta.xml
<CustomField>
    <fullName>Informhfdstructuur__c</fullName>
    <label>Informat hfdstructuur</label>
    <length>36</length>
    <type>Text</type>
</CustomField>