force-app/main/default/objects/Asset/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <label>Institute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>