force-app/main/default/objects/Asset/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <label>Introduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>