force-app/main/default/objects/Asset/fields/IntroductionYear__c.field-meta.xml
<CustomField>
    <fullName>IntroductionYear__c</fullName>
    <label>Introduction Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>2020-2021</fullName>
            </value>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2022-2023</fullName>
            </value>
            <value>
                <fullName>2023-2024</fullName>
            </value>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2009-2010</fullName>
                <isActive>false</isActive>
                <label>2009-2010</label>
            </value>
            <value>
                <fullName>2010-2011</fullName>
                <isActive>false</isActive>
                <label>2010-2011</label>
            </value>
            <value>
                <fullName>2011-2012</fullName>
                <isActive>false</isActive>
                <label>2011-2012</label>
            </value>
            <value>
                <fullName>2012-2013</fullName>
                <isActive>false</isActive>
                <label>2012-2013</label>
            </value>
            <value>
                <fullName>2013-2014</fullName>
                <isActive>false</isActive>
                <label>2013-2014</label>
            </value>
            <value>
                <fullName>2014-2015</fullName>
                <isActive>false</isActive>
                <label>2014-2015</label>
            </value>
            <value>
                <fullName>2015-2016</fullName>
                <isActive>false</isActive>
                <label>2015-2016</label>
            </value>
            <value>
                <fullName>2017-20018</fullName>
                <isActive>false</isActive>
                <label>2017-20018</label>
            </value>
            <value>
                <fullName>2017-208</fullName>
                <isActive>false</isActive>
                <label>2017-208</label>
            </value>
            <value>
                <fullName>2020-201</fullName>
                <isActive>false</isActive>
                <label>2020-201</label>
            </value>
            <value>
                <fullName>2020-2020</fullName>
                <isActive>false</isActive>
                <label>2020-2020</label>
            </value>
            <value>
                <fullName>2020_2021</fullName>
                <isActive>false</isActive>
                <label>2020_2021</label>
            </value>
            <value>
                <fullName>JA</fullName>
                <isActive>false</isActive>
                <label>JA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>