force-app/main/default/objects/Asset/fields/InvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceFrequency__c</fullName>
    <label>Renewal Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Frequency</valueSetName>
    </valueSet>
</CustomField>