force-app/main/default/objects/Asset/fields/InvoicingFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoicingFrequency__c</fullName>
    <label>Invoicing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Frequency</valueSetName>
    </valueSet>
</CustomField>