force-app/main/default/objects/Asset/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <formula>Product2.ISBN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISBN</label>
    <type>Text</type>
</CustomField>