force-app/main/default/objects/Asset/fields/IsBooklistPresent__c.field-meta.xml
<CustomField>
    <fullName>IsBooklistPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booklist Present</label>
    <type>Checkbox</type>
</CustomField>