force-app/main/default/objects/Asset/fields/IsInformat__c.field-meta.xml
<CustomField>
    <fullName>IsInformat__c</fullName>
    <formula>CONTAINS(PriceBook__r.Name, &apos;Informat&apos;)</formula>
    <label>Is Informat</label>
    <type>Checkbox</type>
</CustomField>