force-app/main/default/objects/Asset/fields/IsSalesStatistic__c.field-meta.xml
<CustomField>
    <fullName>IsSalesStatistic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Statistic</label>
    <type>Checkbox</type>
</CustomField>