force-app/main/default/objects/Asset/fields/IsUpForRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsUpForRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Up For Renewal</label>
    <type>Checkbox</type>
</CustomField>