force-app/main/default/objects/Asset/fields/LargestPublisher__c.field-meta.xml
<CustomField>
    <fullName>LargestPublisher__c</fullName>
    <label>Largest Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>