force-app/main/default/objects/Asset/fields/LastRenewalUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastRenewalUpdate__c</fullName>
    <label>Last Renewal Update</label>
    <type>Date</type>
</CustomField>