force-app/main/default/objects/Asset/fields/LegacyLicenceId__c.field-meta.xml
<CustomField>
    <fullName>LegacyLicenceId__c</fullName>
    <label>Legacy Licence Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>