force-app/main/default/objects/Asset/fields/LicenseDuration__c.field-meta.xml
<CustomField>
    <fullName>LicenseDuration__c</fullName>
    <inlineHelpText>In months.</inlineHelpText>
    <label>License Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>