force-app/main/default/objects/Asset/fields/LocationTotalNumberofStudents__c.field-meta.xml
<CustomField>
    <fullName>LocationTotalNumberofStudents__c</fullName>
    <label>Location Total Number of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>