force-app/main/default/objects/Asset/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Method__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Methods</relationshipName>
    <type>Lookup</type>
</CustomField>