force-app/main/default/objects/Asset/fields/MethodCode__c.field-meta.xml
<CustomField>
    <fullName>MethodCode__c</fullName>
    <formula>Method__r.MethodCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Code</label>
    <type>Text</type>
</CustomField>