force-app/main/default/objects/Asset/fields/NumberofActiveUsers__c.field-meta.xml
<CustomField>
    <fullName>NumberofActiveUsers__c</fullName>
    <label>Number of Active Users</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>