force-app/main/default/objects/Asset/fields/NumCompTitlesBL__c.field-meta.xml
<CustomField>
    <fullName>NumCompTitlesBL__c</fullName>
    <label>Number of Compulsory Titles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>