force-app/main/default/objects/Asset/fields/NumCompTitlesToReview__c.field-meta.xml
<CustomField>
    <fullName>NumCompTitlesToReview__c</fullName>
    <label>Number of Titles to Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>