force-app/main/default/objects/Asset/fields/NumofCompTitlestoAttack__c.field-meta.xml
<CustomField>
    <fullName>NumofCompTitlestoAttack__c</fullName>
    <label>Number of Comp Titles to Attack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>