force-app/main/default/objects/Asset/fields/NumStudentsStudyYear__c.field-meta.xml
<CustomField>
    <fullName>NumStudentsStudyYear__c</fullName>
    <label>Number of Students Study Year__c</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>