force-app/main/default/objects/Asset/fields/OrderItemIdOnCreate__c.field-meta.xml
<CustomField>
    <fullName>OrderItemIdOnCreate__c</fullName>
    <label>Order Item Id On Create</label>
    <length>56</length>
    <type>Text</type>
</CustomField>