force-app/main/default/objects/Asset/fields/OriginalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalCreatedDate__c</fullName>
    <description>Audit fields cannot be set on Assets, therefore we need a second field to log the Original Created Date that is copied from legacy systems.</description>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>