force-app/main/default/objects/Asset/fields/OtherCancellationReason__c.field-meta.xml
<CustomField>
    <fullName>OtherCancellationReason__c</fullName>
    <label>Other Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>