force-app/main/default/objects/Asset/fields/ParttimeFulltime__c.field-meta.xml
<CustomField>
    <fullName>ParttimeFulltime__c</fullName>
    <label>Parttime/Fulltime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deeltijd</fullName>
            </value>
            <value>
                <fullName>Voltijd</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
                <isActive>false</isActive>
                <label>Dual</label>
            </value>
            <value>
                <fullName>Full</fullName>
                <isActive>false</isActive>
                <label>Full</label>
            </value>
            <value>
                <fullName>Part</fullName>
                <isActive>false</isActive>
                <label>Part</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>