force-app/main/default/objects/Asset/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <label>Potential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>