force-app/main/default/objects/Asset/fields/PreviousRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousRenewalDate__c</fullName>
    <label>Previous Renewal Date</label>
    <type>Date</type>
</CustomField>