force-app/main/default/objects/Asset/fields/PriceValidTillDate__c.field-meta.xml
<CustomField>
    <fullName>PriceValidTillDate__c</fullName>
    <description>Indicates until when a price is valid. Crucial information for renewals and invoicing frequency. If the End date of an order = the Price Valid Till Date, a renewal (and a new invoice) will use new pricing (not quantities, which is something different). If the end date of an order &gt; Price Valid Till Date then an invoice must be created with the price registered on the Asset.</description>
    <label>Price Valid Till Date</label>
    <type>Date</type>
</CustomField>