force-app/main/default/objects/Asset/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <formula>text(Product2.Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Class</label>
    <type>Text</type>
</CustomField>