force-app/main/default/objects/Asset/fields/ProductFamilyType__c.field-meta.xml
<CustomField>
    <fullName>ProductFamilyType__c</fullName>
    <formula>text(Product2.FamilyType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family Type</label>
    <type>Text</type>
</CustomField>