force-app/main/default/objects/Asset/fields/ProductRenewalType__c.field-meta.xml
<CustomField>
    <fullName>ProductRenewalType__c</fullName>
    <formula>TEXT(Product2.Renewal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Renewal Type</label>
    <type>Text</type>
</CustomField>