force-app/main/default/objects/Asset/fields/ProductTitle__c.field-meta.xml
<CustomField>
    <fullName>ProductTitle__c</fullName>
    <formula>Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Title</label>
    <type>Text</type>
</CustomField>