force-app/main/default/objects/Asset/fields/QuantityStartDate__c.field-meta.xml
<CustomField>
    <fullName>QuantityStartDate__c</fullName>
    <label>Quantity Start Date</label>
    <type>Date</type>
</CustomField>