force-app/main/default/objects/Asset/fields/QuantityUpdateCheckYearly__c.field-meta.xml
<CustomField>
    <fullName>QuantityUpdateCheckYearly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Update Check Yearly</label>
    <type>Checkbox</type>
</CustomField>