force-app/main/default/objects/Asset/fields/RapDate__c.field-meta.xml
<CustomField>
    <fullName>RapDate__c</fullName>
    <label>Rap Date</label>
    <type>Date</type>
</CustomField>