force-app/main/default/objects/Asset/fields/RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalDate__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>