force-app/main/default/objects/Asset/fields/RenewalMessage__c.field-meta.xml
<CustomField>
    <fullName>RenewalMessage__c</fullName>
    <label>Renewal Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>