force-app/main/default/objects/Asset/fields/RenewalRunDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalRunDate__c</fullName>
    <label>Renewal Run Date</label>
    <type>Date</type>
</CustomField>