force-app/main/default/objects/Asset/fields/RetailerName__c.field-meta.xml
<CustomField>
    <fullName>RetailerName__c</fullName>
    <label>Retailer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>