force-app/main/default/objects/Asset/fields/SameLearningLine__c.field-meta.xml
<CustomField>
    <fullName>SameLearningLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Learning Line</label>
    <type>Checkbox</type>
</CustomField>