force-app/main/default/objects/Asset/fields/Schoolnumber__c.field-meta.xml
<CustomField>
    <fullName>Schoolnumber__c</fullName>
    <formula>Account.ExternalCustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schoolnumber</label>
    <type>Text</type>
</CustomField>