force-app/main/default/objects/Asset/fields/SchoolYear__c.field-meta.xml
<CustomField>
    <fullName>SchoolYear__c</fullName>
    <label>School Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2023-2024</fullName>
            </value>
            <value>
                <fullName>2022-2023</fullName>
            </value>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2020-2021</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2015-2016</fullName>
            </value>
            <value>
                <fullName>2014-2015</fullName>
            </value>
            <value>
                <fullName>2013-2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>