force-app/main/default/objects/Asset/fields/ShipToAttentionOf__c.field-meta.xml
<CustomField>
    <fullName>ShipToAttentionOf__c</fullName>
    <label>ShipTo Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>