force-app/main/default/objects/Asset/fields/ShiptoExternalId__c.field-meta.xml
<CustomField>
    <fullName>ShiptoExternalId__c</fullName>
    <formula>Account.ExternalCustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to External Id</label>
    <type>Text</type>
</CustomField>