force-app/main/default/objects/Asset/fields/SoldUsers__c.field-meta.xml
<CustomField>
    <fullName>SoldUsers__c</fullName>
    <label>Sold Users (quantity)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>