force-app/main/default/objects/Asset/fields/SourceSystemOrderId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemOrderId__c</fullName>
    <label>Source System Order ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>