force-app/main/default/objects/Asset/fields/SourceSystemRowId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemRowId__c</fullName>
    <description>Unique field, matching the row id field of the Retailer Statistics Import. Prevents duplicate sales statistics assets being created.</description>
    <externalId>true</externalId>
    <label>Source System Row ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>