force-app/main/default/objects/Asset/fields/StudentsIntroductionYear__c.field-meta.xml
<CustomField>
    <fullName>StudentsIntroductionYear__c</fullName>
    <label># Students Introduction Year</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>